find_package(Doxygen)

if(NOT DOXYGEN_FOUND)
  message(WARNING "doxygen binary couldn't be found")
  RETURN()
endif()

set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
set(DOXYGEN_STRIP_FROM_PATH ${CMAKE_HOME_DIRECTORY})
set(DOXYGEN_EXTRACT_STATIC YES)
set(DOXYGEN_ENABLE_PREPROCESSING YES)
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
set(DOXYGEN_PREDEFINED __attribute__((__packed__)))

doxygen_add_docs(docs
  ${CMAKE_HOME_DIRECTORY}/docs
  ${CMAKE_HOME_DIRECTORY}/include
  ${CMAKE_HOME_DIRECTORY}/src
  ${CMAKE_HOME_DIRECTORY}/examples
  ${CMAKE_HOME_DIRECTORY}/README.md
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
)
